hphp/test/zend/good/ext-date/DateTime_add-spring-type2-type2.php
<?php

require 'examine_diff.inc';
define('PHPT_DATETIME_SHOW', PHPT_DATETIME_SHOW_ADD);
require 'DateTime_data-spring-type2-type2.inc';

?>